# qt-super-mario

./: .gitignore  CMakeLists.txt
.qt/: QtDeploySupport.cmake
include/: .player.hpp.swp  CMakeLists.txt  main.cpp  player.cpp  player.hpp
src/: .main.cpp.swp  .player.cpp.swp  main.cpp  player.cpp
